--- a/.github/workflows/android-internal-build.yml
+++ b/.github/workflows/android-internal-build.yml
@@ -2,7 +2,8 @@ name: Android Internal Build
 run-name: ${{ github.event.inputs.buildname }} 
 
 env:
-  backendServiceDefaultUrl: https://api.sandbox.mosip.net
+  mimotoBackendServiceDefaultUrl: https://api.sandbox.mosip.net
+  esignetBackendServiceDefaultUrl: https://api.sandbox.mosip.net
 
 on:
   workflow_dispatch:
@@ -12,8 +13,13 @@ on:
         required: true
         default: 'Sprint-x/Collab/release-x.x.x'
         type: string
-      backendServiceUrl:
-        description: 'Backend service URL'
+      mimotoBackendServiceUrl:
+        description: 'Mimoto backend service URL'
+        required: true
+        default: 'https://api.sandbox.mosip.net'
+        type: string
+      esignetBackendServiceUrl:
+        description: 'Esignet backend service URL'
         required: true
         default: 'https://api.sandbox.mosip.net'
         type: string
@@ -113,7 +119,8 @@ jobs:
           cd android/scripts
           ./internal-build.sh
         env:
-          MIMOTO_HOST: ${{ github.event.inputs.backendServiceUrl }}
+          MIMOTO_HOST: ${{ github.event.inputs.mimotoBackendServiceUrl }}
+          ESIGNET_HOST: ${{ github.event.inputs.esignetBackendServiceUrl }}
           APPLICATION_THEME: ${{ github.event.inputs.theme }} 
           RELEASE_KEYSTORE_ALIAS: androidreleasekey
           RELEASE_KEYSTORE_PASSWORD: '${{secrets.INJI_ANDROID_RELEASE_STOREPASS}}'
@@ -195,7 +202,8 @@ jobs:
           cd android
           ./gradlew :app:assembleMosipRelease
         env:
-          MIMOTO_HOST: ${{ github.event.inputs.backendServiceUrl }}
+          MIMOTO_HOST: ${{ github.event.inputs.mimotoBackendServiceUrl }}
+          ESIGNET_HOST: ${{ github.event.inputs.esignetBackendServiceUrl }}
           APPLICATION_THEME: ${{ github.event.inputs.theme }} 
           RELEASE_KEYSTORE_ALIAS: androidreleasekey
           RELEASE_KEYSTORE_PASSWORD: '${{secrets.INJI_ANDROID_RELEASE_STOREPASS}}'
