--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -1,10 +1,15 @@
 name: Inji iOS build
 
-on:           
+on:
   workflow_dispatch:
     inputs:
-      backendServiceUrl:
-        description: 'Backend service URL'
+      mimotoBackendServiceUrl:
+        description: 'Mimoto backend service URL'
+        required: true
+        default: 'https://api.sandbox.mosip.net'
+        type: string
+      esignetBackendServiceUrl:
+        description: 'Esignet backend service URL'
         required: true
         default: 'https://api.sandbox.mosip.net'
         type: string
@@ -53,22 +58,22 @@ jobs:
   build_ios:
     name: Deploying to Testflight
     runs-on: macos-13
-    
+
     steps:
       - uses: actions/checkout@v3.1.0
       - uses: actions/setup-node@v3
         with:
           node-version: '16.x'
-      
+
       - name: Install npm dependencies
         run: |
           npm install
-        
+
       - name: Install Pod
         run: |
           cd ios
           pod install
-        
+
       - name: Deploy iOS Beta to TestFlight
         run: |
           cd ios
