--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "expo-updates": "~0.11.6",
     "i18next": "^21.6.16",
     "iso-639-3": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "mosip-inji-face-sdk": "^0.1.12",
     "node-forge": "^1.3.1",
+    "node-jose": "^2.2.0",
     "patch-package": "^6.5.1",
     "postinstall-postinstall": "^2.1.0",
     "react": "17.0.1",
