--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "expo-font": "~11.1.1",
     "expo-local-authentication": "~13.3.0",
     "expo-localization": "~14.1.1",
+    "expo-modules-autolinking": "^1.5.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
@@ -81,7 +82,7 @@
     "react-native-securerandom": "^1.0.1",
     "react-native-simple-markdown": "^1.1.0",
     "react-native-spinkit": "^1.5.1",
-    "react-native-svg": "13.4.1",
+    "react-native-svg": "13.4.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tuvali": "github:mosip/tuvali#v0.4.4",
     "react-native-vector-icons": "^10.0.0",
