--- a/.github/workflows/ios-automation-build.yml
+++ b/.github/workflows/ios-automation-build.yml
@@ -32,8 +32,8 @@ on:
 
 jobs:
   build_ios:
-    name: Deploying to Testflight
-    runs-on: macos-12
+    name: Uploading App to Actions
+    runs-on: macos-13
 
     steps:
       - uses: actions/checkout@v3.1.0
