--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@react-navigation/devtools": "^6.0.19",
     "@tsconfig/react-native": "^2.0.2",
+    "@types/node-forge": "^1.3.6",
     "@types/react": "^18.0.24",
     "@types/react-native": "~0.64.12",
     "@types/react-test-renderer": "^18.0.0",
