--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/bottom-tabs": "^6.0.7",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.1.0",
+    "@types/node-forge": "^1.3.8",
     "@xstate/react": "^3.0.1",
     "base64url-universal": "^1.1.0",
     "buffer": "^6.0.3",
@@ -86,8 +87,7 @@
     "react-native-vector-icons": "^10.0.0",
     "short-unique-id": "^4.4.4",
     "simple-pem2jwk": "^0.2.4",
-    "telemetry-sdk": "git://github.com/mosip/sunbird-telemetry-sdk.git#f762be5732ee552c0c70bdd540aa4e2701554c71",  
-    "telemetry-sdk": "git://github.com/mosip/sunbird-telemetry-sdk.git#develop",  
+    "telemetry-sdk": "git://github.com/mosip/sunbird-telemetry-sdk.git#develop",
     "xstate": "^4.35.0"
   },
   "devDependencies": {
