--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-native-svg": "13.4.0",
     "react-native-tuvali": "github:mosip/tuvali#v0.4.5",
     "react-native-vector-icons": "^10.0.0",
+    "realm": "^12.3.0",
     "short-unique-id": "^4.4.4",
     "simple-pem2jwk": "^0.2.4",
     "telemetry-sdk": "git://github.com/mosip/sunbird-telemetry-sdk.git#f762be5732ee552c0c70bdd540aa4e2701554c71", 
