--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "i18next": "^21.6.16",
     "iso-639-3": "^3.0.1",
     "jwt-decode": "^3.1.2",
-    "mosip-mobileid-sdk": "git://github.com/mosip/mosip-mobileid-sdk.git#IrisScan",
+    "@iriscan/biometric-sdk-react-native": "^0.2.4",
     "node-forge": "^1.3.1",
     "node-jose": "^2.2.0",
     "patch-package": "^6.5.1",
