--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-native-mmkv-storage": "^0.9.1",
     "react-native-permissions": "^3.8.0",
     "react-native-popable": "^0.4.3",
+    "react-native-progress": "^5.0.1",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-restart": "^0.0.24",
     "react-native-rsa-native": "^2.0.5",
